--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
