--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./app.js",
     "dev": "nodemon ./app.js",
-    "test": "mocha ./tests/*.spec.js --exit"
+    "test": "mocha ./tests/**/*.spec.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "chai": "^5.1.2",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0"
